--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "xtal-latx": "0.0.86",
+    "idb-keyval": "3.1.0"
+  },
+  "devDependencies": {
+    "@webcomponents/webcomponentsjs": "2.2.1",
+    "jiife": "0.0.10",
+    "tape": "4.9.1",
+    "@types/tape": "4.2.32",
+    "xtal-test": "0.0.10",
+    "p-d.p-u": "0.0.96",
+    "xtal-state": "0.0.60"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bahrus/ob-session.git"
