--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ob-session",
   "version": "0.0.1",
   "description": "TBD",
-  "main": "ob-session.js",
+  "main": "ob-session-api.js",
+  "module": "ob-session-api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
