--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "xtal-latx": "0.0.86",
-    "idb-keyval": "3.1.0"
+    "xtal-element": "0.0.30"
   },
   "devDependencies": {
-    "@webcomponents/webcomponentsjs": "2.2.1",
-    "jiife": "0.0.10",
-    "tape": "4.9.1",
-    "@types/tape": "4.2.32",
+    "@webcomponents/webcomponentsjs": "2.2.7",
+    "jiife": "0.0.12",
+    "tape": "4.10.1",
+    "@types/tape": "4.2.33",
     "xtal-test": "0.0.10",
-    "p-d.p-u": "0.0.96",
-    "xtal-state": "0.0.60"
+    "p-d.p-u": "0.0.105",
+    "xtal-state": "0.0.67"
   },
   "repository": {
     "type": "git",
