--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "main": "ob-session-api.js",
   "module": "ob-session-api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "node node_modules/xtal-test/serve.js"
   },
   "dependencies": {
-    "xtal-element": "0.0.59"
+    "xtal-element": "0.0.65",
+    "trans-render": "0.0.118"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "2.2.10",
     "jiife": "0.0.12",
-    "tape": "4.10.2",
+    "tape": "4.11.0",
     "@types/tape": "4.2.33",
     "xtal-test": "0.0.19",
-    "p-et-alia": "0.0.4",
-    "xtal-state": "0.0.85"
+    "p-et-alia": "0.0.10",
+    "xtal-state": "0.0.85",
+    "es-module-shims": "0.2.13"
   },
   "repository": {
     "type": "git",
